<resources>
    <string name="app_name">iCC 托育小幫手</string>
    <string name="app_browser_name">通用瀏覽器</string>
    <string name="app_slogan">iCC托育小幫手是一個臨時育兒支援服務的線上媒合平台，為所有因育兒壓力而疲憊的爸媽存在。我們建立專業審核機制，透過公開檔案與評價、一鍵案件發佈+應徵自動通知，讓爸媽即時找到所需的育兒救援。</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_search">搜尋</string>
    <string name="menu_personal">個人</string>
    <string name="menu_need">需求</string>

    <string name="menu_notifications">通知</string>
    <string name="menu_issues">問題</string>
    <string name="menu_starred">收藏</string>
    <string name="menu_settings">設定</string>
    <string name="menu_about">關於</string>

    <string name="menu_account">帳號</string>
    <string name="menu_data">基本資料</string>
    <string name="menu_baby">我的寶寶</string>
    <string name="menu_babysitter">保母簡介</string>
    <string name="menu_notice">通知</string>

    <string name="about_copyright">© %1$s xuexiangjys All rights reserved.</string>
    <string name="about_item_homepage">官方網站</string>
    <string name="about_item_author_github">關於作者</string>
    <string name="about_item_donation_link">捐贈作者</string>
    <string name="about_item_add_qq_group">QQ交流群</string>
    <string name="url_project_github">https://github.com/xuexiangjys/TemplateAppProject</string>
    <string name="url_author_github">https://github.com/xuexiangjys</string>
    <string name="url_donation_link">https://gitee.com/xuexiangjys/Resource/blob/master/doc/sponsor.md</string>
    <string name="url_add_qq_group">http://qm.qq.com/cgi-bin/qm/qr?k=tiP-E6rDf0y77PRNfp2lNVcc9RsglPCM</string>

    <string name="lab_yes">是</string>
    <string name="lab_no">否</string>
    <string name="lab_open_third_app">是否允许页面打开第三方应用?</string>

    <!-- 隐私政策弹窗   -->
    <string name="lab_exit_app">退出APP</string>
    <string name="lab_agree">同意</string>
    <string name="lab_disagree">不同意</string>
    <string name="lab_look_again">再次查看</string>
    <string name="lab_still_disagree">仍不同意</string>
    <string name="title_reminder">温馨提示</string>
    <string name="content_think_about_it_again">要不要再想想</string>
    <string name="content_privacy_explain_again">我們非常重視對您個人信息的保護，承諾嚴格按照《%s隱私權政策》保護及處理你的信息。如果你不同意該政策，很遺憾我們將無法為你提供服務</string>
    <string name="lab_privacy_name">《%s隱私權政策》</string>

    <!-- 登录   -->
    <string name="title_login_register">登入/註冊</string>
    <string name="title_login">登入</string>
    <string name="title_register">註冊</string>
    <string name="title_email">Email</string>
    <string name="title_password">密碼</string>
    <string name="title_check_password">確認密碼</string>
    <string name="title_old_password">舊密碼</string>
    <string name="title_forget_password">重設密碼</string>

    <string name="lab_no_account">還沒有帳號?</string>
    <string name="lab_forget_password">忘記密碼</string>
    <string name="lab_password">密碼</string>
    <string name="lab_register_account">點擊註冊即表示同意</string>
    <string name="lab_service_protocol"><![CDATA[<用戶協議>]]></string>
    <string name="lab_logout_confirm">是否確認登出帳號？</string>

    <string name="hint_please_input_email">請輸入Email</string>
    <string name="hint_please_input_password">請輸入密碼</string>
    <string name="hint_please_check_password">請確認密碼</string>

    <string name="tip_password_error">密碼必須是8~18位字母和數字的组合！</string>
    <string name="tip_new_password_error">新密碼必須是8~18位字母和數字的组合！</string>
    <string name="tip_email_error">無效的信箱！</string>

    <string name="regex_password">^(?:(?=.*[a-zA-Z])(?=.*[0-9])).{8,18}$</string>

    <!-- 基本資料   -->
    <string name="title_personal_data">基本資料</string>
    <string name="title_name">暱稱</string>
    <string name="title_real_name">本名</string>
    <string name="hint_please_input_real_name">請輸入真實姓名</string>
    <string name="hint_please_input_name">請輸入暱稱</string>

    <!-- 需求   -->
    <string name="title_needs">需求填寫</string>
    <string name="title_want">我要找</string>
    <string name="title_time">時間</string>
    <string name="title_place">地點</string>
    <string name="title_money">薪資</string>
    <string name="title_else">其他</string>

    <!-- 評論   -->
    <string name="title_comment">評論</string>
    <string name="title_chat">發送聯絡請求</string>
    <string name="title_house">請求詳細地點</string>

</resources>
