<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 xuexiangjys(xuexiangjys@163.com)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<!--中間导航栏-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_menu_privacy"
        android:title="@string/menu_account" />

    <item
        android:id="@+id/nav_data"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/menu_data" />

    <item
        android:id="@+id/nav_baby"
        android:icon="@drawable/ic_menu_star"
        android:title="@string/menu_baby" />

    <item
        android:id="@+id/nav_babysitter"
        android:icon="@drawable/ic_menu_star"
        android:title="@string/menu_babysitter" />

    <item
        android:id="@+id/nav_notice"
        android:icon="@drawable/ic_menu_notifications"
        android:title="@string/menu_notice" />

</menu>