<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2019 xuexiangjys(xuexiangjys@163.com)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="40dp"
    android:background="@color/background">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="165dp"
        android:layout_height="165dp"
        android:contentDescription="Logo"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/ic_logo_app" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="200dp"
        android:layout_height="64dp"
        android:contentDescription="Logo"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/ic_logo_name" />

    <TextView
        style="@style/TextStyle.Title"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:text="@string/title_register"
        android:textColor="@color/title"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:tint="?attr/colorAccent"
                app:srcCompat="@drawable/ic_phone" />

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:hint="@string/hint_please_input_email"
                android:textColorHint="@color/white"
                android:inputType="textEmailAddress"
                app:met_clearButton="true"
                app:met_errorMessage="@string/tip_email_error"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/title_email" />

        </FrameLayout>


        <FrameLayout
            android:id="@+id/fl_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:tint="?attr/colorAccent"
                app:srcCompat="@drawable/ic_password" />

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:hint="@string/hint_please_input_password"
                android:inputType="textPassword"
                app:met_clearButton="false"
                app:met_errorMessage="@string/tip_password_error"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/lab_password"
                app:met_regexp="@string/regex_password" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_check_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:tint="?attr/colorAccent"
            app:srcCompat="@drawable/ic_password" />

        <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
            android:id="@+id/et_check_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:hint="@string/hint_please_check_password"
            android:inputType="textPassword"
            app:met_clearButton="false"
            app:met_errorMessage="@string/tip_password_error"
            app:met_floatingLabel="normal"
            app:met_floatingLabelText="@string/lab_password"
            app:met_regexp="@string/regex_password" />
        </FrameLayout>

    </LinearLayout>

    <TextView
        style="@style/TextStyle.Title"
        android:layout_width="match_parent"
        android:layout_marginTop="24dp"
        android:text="@string/title_personal_data"
        android:textColor="@color/title"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:tint="?attr/colorAccent"
                app:srcCompat="@drawable/ic_menu_person" />

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/et_real_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:hint="@string/hint_please_input_real_name"
                android:inputType="text" />

        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:tint="?attr/colorAccent"
                app:srcCompat="@drawable/ic_menu_star" />

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:hint="@string/hint_please_input_name"
                android:inputType="text" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            style="@style/TextStyle.Explain"
            android:layout_width="wrap_content"
            android:text="您是否已閱讀並同意"
            android:textColor="@color/xui_config_color_primary_text" />

        <com.xuexiang.xui.widget.alpha.XUIAlphaTextView
            android:id="@+id/tv_user_protocol"
            style="@style/TextStyle.Explain"
            android:layout_width="wrap_content"
            android:text="用戶協議"
            android:textColor="?attr/colorAccent" />

        <TextView
            style="@style/TextStyle.Explain"
            android:layout_width="wrap_content"
            android:text="和"
            android:textColor="@color/xui_config_color_primary_text" />

        <com.xuexiang.xui.widget.alpha.XUIAlphaTextView
            android:id="@+id/tv_privacy_protocol"
            style="@style/TextStyle.Explain"
            android:layout_width="wrap_content"
            android:text="隱私政策"
            android:textColor="?attr/colorAccent" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="24dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.xuexiang.xui.widget.textview.supertextview.SuperButton
            android:id="@+id/btn_yes"
            style="@style/SuperButton.Primary.Login"
            android:layout_marginTop="16dp"
            android:text="@string/lab_yes" />

        <com.xuexiang.xui.widget.textview.supertextview.SuperButton
            android:id="@+id/btn_no"
            style="@style/SuperButton.Primary.Login"
            android:layout_marginTop="16dp"
            android:text="@string/lab_no" />

        </LinearLayout>



    <com.xuexiang.xui.widget.textview.supertextview.SuperButton
        android:id="@+id/btn_register"
        style="@style/SuperButton.Primary.Login"
        android:layout_marginTop="16dp"
        android:text="@string/title_register" />


</LinearLayout>