<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2020 xuexiangjys(xuexiangjys@163.com)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="6dp"
    app:cardBackgroundColor="@color/xui_config_color_white"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardPreventCornerOverlap="true"
    app:contentPaddingBottom="10dp"
    app:contentPaddingLeft="16dp"
    app:contentPaddingRight="16dp"
    app:contentPaddingTop="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.xuexiang.xui.widget.imageview.RadiusImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@mipmap/ic_launcher"
                    app:riv_is_circle="true" />

                <TextView
                    android:id="@+id/tv_user_name"
                    style="@style/TextStyle.Explain"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/colorPrimary"
                    tools:text="xuexiangjys" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_date"
                style="@style/TextStyle.Explain"
                android:layout_gravity="end|center_vertical"
                tools:text="2020.11.28" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_title_time"
                        style="@style/TextStyle.Content"
                        android:ellipsize="end"
                        android:gravity="start|center_vertical"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimaryDark"
                        tools:text="@string/title_time" />
                    <TextView
                        android:id="@+id/tv_time"
                        style="@style/TextStyle.Content"
                        android:layout_marginStart="36dp"
                        android:singleLine="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="14dp"
                        tools:text="2020/11/28 (六) 全天" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_title_place"
                        style="@style/TextStyle.Content"
                        android:ellipsize="end"
                        android:gravity="start|center_vertical"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimaryDark"
                        tools:text="@string/title_place" />
                    <TextView
                        android:id="@+id/tv_place"
                        style="@style/TextStyle.Content"
                        android:layout_marginStart="36dp"
                        android:singleLine="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="14dp"
                        tools:text="自宅" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_title_money"
                        style="@style/TextStyle.Content"
                        android:ellipsize="end"
                        android:gravity="start|center_vertical"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimaryDark"
                        tools:text="@string/title_money" />
                    <TextView
                        android:id="@+id/tv_money"
                        style="@style/TextStyle.Content"
                        android:layout_marginStart="36dp"
                        android:singleLine="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="14dp"
                        tools:text="1000/小時" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_title_else"
                    style="@style/TextStyle.Content"
                    android:ellipsize="end"
                    android:gravity="start|center_vertical"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimaryDark"
                    tools:text="@string/title_else" />
                <TextView
                    android:id="@+id/tv_else"
                    style="@style/TextStyle.Content"
                    android:layout_marginStart="36dp"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="14dp"
                    tools:text="@string/app_slogan" />

                </FrameLayout>


            </LinearLayout>

            <com.xuexiang.xui.widget.imageview.RadiusImageView
                android:id="@+id/iv_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/xui_ic_default_img"
                app:riv_border_width="0dp"
                app:riv_corner_radius="5dp" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_praise"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_comment" />

                <TextView
                    android:id="@+id/tv_praise"
                    style="@style/TextStyle.Explain"
                    android:layout_marginStart="5dp"
                    tools:text="@string/title_chat" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_read"
                style="@style/TextStyle.Explain"
                android:layout_gravity="center_vertical|end"
                tools:text="已聯絡人數 123" />

        </FrameLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>